tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/array/no-close.stderr
TOML parse error at line 1, column 24
  |
1 | long_array = [ 1, 2, 3
  |                        ^
invalid array
expected `]`
